--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Voltran Club</title>
-    <link rel="stylesheet" href="indexstyle.css" />
+    <link rel="stylesheet" href="indexstyle.css"/>
   </head>
   <body>
     <header>
-      <h1>VoltranClub</h1>
+      <h1>VoltranClup</h1>
     </header>
 
     <section class="banner">
